--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,6 +1,6 @@
 #FOR POSTGRES
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/mb
+jdbc.url=jdbc:postgresql://localhost:5432/tm
 jdbc.username=user
 jdbc.password=password
 
