--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,7 @@
     </filter-mapping>
     <filter>
         <filter-name>XSS</filter-name>
-        <filter-class>md.iic.netty.filter.CrossScriptingFilter</filter-class>
+        <filter-class>md.usm.tm.filter.CrossScriptingFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>XSS</filter-name>
@@ -28,7 +28,7 @@
 
     <filter>
         <filter-name>SmileyWrapper</filter-name>
-        <filter-class>md.iic.netty.filter.emoticons.SmileyFilter</filter-class>
+        <filter-class>md.usm.tm.filter.emoticons.SmileyFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>SmileyWrapper</filter-name>
