--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.endava.twitter</groupId>
-    <artifactId>little-twitter</artifactId>
+    <artifactId>task-manager</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <properties>
@@ -18,7 +18,7 @@
     <distributionManagement>
         <snapshotRepository>
             <id>nexus-dev</id>
-            <url>http://172.16.35.186:8818/repository/little-twitter/</url>
+            <url>http://172.16.35.186:8818/repository/task-manager/</url>
         </snapshotRepository>
     </distributionManagement>
 
