Functionality - Create Task

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,8 +1,8 @@
 #FOR POSTGRES
 jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/tm
-jdbc.username=user
-jdbc.password=password
+jdbc.username=postgres
+jdbc.password=Qwerty!2345^
 
 #FOR MS SQL SERVER
 #jdbc.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
