Added Validator for each Entity Updeted Database Updated JSP's

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -5,3 +5,12 @@ Size.user.password=Password must be over 6 characters.
 Different.user.password=Password doesn't match.
 Wrong.user.email=Email doesn't match the pattern.
 Duplicate.user.email=This email is already registered.
+
+Duplicate.project.name=Such Project Name already exists.
+Duplicate.project.shortName=Such Project Short Name already exists.
+
+Duplicate.period.name=Such Period Name already exists.
+
+Select.task.project=Please select Project
+Select.task.period=Please select Period
+Select.task.status=Please select Status
